@@ -9445,10 +9445,6 @@ In addition to what is mentioned in the section above, the following features
 \end_layout
 
 \begin_layout Itemize
-Type-generic expressions
-\end_layout
-
-\begin_layout Itemize
 Improved Unicode support.
 \end_layout
 
