@@ -4933,13 +4933,67 @@ decorateType (ast * tree, RESULT_TYPE resultType)
       TETYPE (tree) = getSpec (TTYPE (tree));
       return tree;
 
-    case ':':
-      /* if they don't match we have a problem */
+    case GENERIC:
+      {
+        sym_link *type = tree->left->ftype;
+        ast *assoc_list;
+        ast *default_expr = 0;
+        ast *found_expr = 0;
 
+        for(assoc_list = tree->right; assoc_list; assoc_list = assoc_list->left)
+          {
+            ast *const assoc = assoc_list->right;
+            if (!assoc->left)
+              {
+                if (default_expr)
+                  {
+                    werror (E_MULTIPLE_DEFAULT_IN_GENERIC);
+                    goto errorTreeReturn;
+                  }
+                default_expr = assoc->right;
+              }
+            else
+              {
+                sym_link *assoc_type;
+                wassert (IS_AST_LINK (assoc->left));
+                assoc_type = assoc->left->opval.lnk;
+                checkTypeSanity (assoc_type, "_Generic");
+
+                if (compareType (type, assoc->left->opval.lnk) > 0)
+                  {
+                    if (found_expr)
+                      {
+                        werror (E_MULTIPLE_MATCHES_IN_GENERIC);
+                        goto errorTreeReturn;
+                      }
+                    found_expr = assoc->right;
+                  }
+              }
+          }
+        if (!found_expr)
+          found_expr = default_expr;
+
+        if (!found_expr)
+          {
+            werror (E_NO_MATCH_IN_GENERIC);
+            goto errorTreeReturn;
+          }
+        
+        tree = found_expr;
+      }
+      return tree;
+
+    case GENERIC_ASSOC_LIST:
+      return tree;
+
+    case GENERIC_ASSOCIATION:
+      return tree;
+
+    case ':':
       if ((compareType (LTYPE (tree), RTYPE (tree)) == 0) &&
-          (compareType (RTYPE (tree), LTYPE (tree)) == 0) &&
-          !(IS_ARRAY(LTYPE (tree)) && IS_INTEGRAL(RTYPE (tree))) &&
-          !(IS_ARRAY(RTYPE (tree)) && IS_INTEGRAL(LTYPE (tree))))
+        (compareType (RTYPE (tree), LTYPE (tree)) == 0) &&
+        !(IS_ARRAY(LTYPE (tree)) && IS_INTEGRAL(RTYPE (tree))) &&
+        !(IS_ARRAY(RTYPE (tree)) && IS_INTEGRAL(LTYPE (tree))))
         {
           werrorfl (tree->filename, tree->lineno, E_TYPE_MISMATCH, "conditional operator", " ");
           goto errorTreeReturn;
@@ -4947,6 +5001,7 @@ decorateType (ast * tree, RESULT_TYPE resultType)
 
       TTYPE (tree) = computeType (LTYPE (tree), RTYPE (tree), resultType, tree->opval.op);
       TETYPE (tree) = getSpec (TTYPE (tree));
+
       return tree;
 
 #if 0                           // assignment operators are converted by the parser
